; ModuleID = '/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_imath.c_s_dbmul.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_imath.c_s_dbmul.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8**, i8*, i8**, i64)* @s_dbmul to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @s_dbmul(i8** %0, i8* %1, i8** %2, i64 %3) #0 {
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i8** %0, i8*** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8** %2, i8*** %7, align 8
  store i64 %3, i64* %8, align 8
  store i32 0, i32* %9, align 4
  br label %10

10:                                               ; preds = %13, %4
  %11 = load i64, i64* %8, align 8
  %12 = icmp sgt i64 %11, 0
  br i1 %12, label %13, label %31

13:                                               ; preds = %10
  %14 = load i8**, i8*** %5, align 8
  %15 = getelementptr inbounds i8*, i8** %14, i32 1
  store i8** %15, i8*** %5, align 8
  %16 = load i8*, i8** %14, align 8
  %17 = ptrtoint i8* %16 to i32
  %18 = load i8*, i8** %6, align 8
  %19 = ptrtoint i8* %18 to i32
  %20 = mul nsw i32 %17, %19
  %21 = load i32, i32* %9, align 4
  %22 = add nsw i32 %20, %21
  store i32 %22, i32* %9, align 4
  %23 = load i32, i32* %9, align 4
  %24 = call i8* @LOWER_HALF(i32 %23)
  %25 = load i8**, i8*** %7, align 8
  %26 = getelementptr inbounds i8*, i8** %25, i32 1
  store i8** %26, i8*** %7, align 8
  store i8* %24, i8** %25, align 8
  %27 = load i32, i32* %9, align 4
  %28 = call i32 @UPPER_HALF(i32 %27)
  store i32 %28, i32* %9, align 4
  %29 = load i64, i64* %8, align 8
  %30 = add nsw i64 %29, -1
  store i64 %30, i64* %8, align 8
  br label %10

31:                                               ; preds = %10
  %32 = load i32, i32* %9, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %38

34:                                               ; preds = %31
  %35 = load i32, i32* %9, align 4
  %36 = call i8* @LOWER_HALF(i32 %35)
  %37 = load i8**, i8*** %7, align 8
  store i8* %36, i8** %37, align 8
  br label %38

38:                                               ; preds = %34, %31
  ret void
}

declare dso_local i8* @LOWER_HALF(i32) #1

declare dso_local i32 @UPPER_HALF(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
